
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [5.11.3] - 2024-01-06

### Fixed

- Pequeno problema ao iniciar partida de Poker quando a Menhera tem problemas para ler a mensagem anterior.

## [5.11.2] - 2024-01-03

### Added

- Adicionado o tema de carta `Baralho Noturno`, do Mareys.
- Adicionado o tema de fundo de carta `Amanhecer`, também do Mareys.

## [5.11.1] - 2023-11-20

### Added

- Agora é possível ver o histórico de jogos do bicho no [Site da Menhera](https://menherabot.xyz/bicho)!

### Changed

- Reduzido a quantidade máxima de prêmios possíveis nas entregas diárias.

### Fixed

- O jogo do bicho não identificava mais mãos de escolhas de animais.

## [5.11.0] - 2023-11-16

### Added

- **Limites no Silo** - O silo agora possui limite! O limite inicial é de `35` itens, e pode ser aumentado por `5` comprando _Melhorias para a fazendinha_.
- **Melhoria do silo** - Aumente o limite de itens de seu silo com `/fazendinha administrar silo`.
- **Entregas Diárias** - Agora existem as entregas diárias da fazendinha! Ganhe dinheiro realizando entregas no `/fazendinha entregas`. Todo dia um caminhão aparecerá para você fazer entregas. Finalize todas entregas antes do caminhão partir, e ganhe um bônus.
- **Feira de Usuários** - Com as entregas diárias, usuários vão precisar de um volume muito grande de itens. Por isso, agora usuários podem comprar plantas de outros através da feira! Com `/fazendinha feira anunciar` você pode anunciar novos itens na feira. Escolha o produto, quantos você quer vender, e por qual preço.
- Compre itens da feira com `/fazendinha feira comprar`. É possível indicar diretamente qual produto você quer comprar informando no comando, ou listar todos os itens sendo vendidos no momento.